--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-maps": "^0.28.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "styled-components": "^5.3.0"
@@ -24,6 +25,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.64.5",
+    "@types/react-native-maps": "^0.24.2",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.1.12",
     "@types/styled-components-react-native": "^5.1.1",
