--- a/package.json
+++ b/package.json
@@ -10,24 +10,35 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@react-navigation/bottom-tabs": "^6.0.1",
     "@react-navigation/native": "^6.0.1",
+    "babel-plugin-parameter-decorator": "^1.0.16",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "qs": "^6.10.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-dotenv": "^3.1.1",
     "react-native-maps": "^0.28.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
-    "styled-components": "^5.3.0"
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-query": "^3.19.2",
+    "reflect-metadata": "^0.1.13",
+    "styled-components": "^5.3.0",
+    "tsyringe": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/qs": "^6.9.7",
     "@types/react-native": "^0.64.5",
     "@types/react-native-maps": "^0.24.2",
+    "@types/react-query": "^1.2.9",
     "@types/react-test-renderer": "^16.9.2",
-    "@types/styled-components": "^5.1.12",
     "@types/styled-components-react-native": "^5.1.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
