--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-query": "^3.19.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
     "reflect-metadata": "^0.1.13",
     "styled-components": "^5.3.0",
-    "tsyringe": "^4.6.0"
+    "tsyringe": "^4.6.0",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
