--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-query": "^3.19.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "reflect-metadata": "^0.1.13",
     "styled-components": "^5.3.0",
     "tsyringe": "^4.6.0",
