--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.0.1",
     "babel-plugin-parameter-decorator": "^1.0.16",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "date-fns": "^2.23.0",
     "qs": "^6.10.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
@@ -37,6 +38,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^26.0.23",
     "@types/qs": "^6.9.7",
     "@types/react-native": "^0.64.5",
