--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,15 +7,13 @@ buildscript {
         compileSdkVersion = 29
         targetSdkVersion = 29
         ndkVersion = "20.1.5948944"
-        playServicesVersion = "17.0.0"
-        androidMapsUtilsVersion = "2.2.5"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:4.1.0")
+        classpath('com.android.tools.build:gradle:4.0.0')
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
